# cookiecutter-template

./: README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
tests/: test_bake_template.py
{{cookiecutter.template_slug}}/: LICENSE.MIT  README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.template_slug}}/hooks/: post_gen_project.py
{{cookiecutter.template_slug}}/tests/: test_bake_project.py
{{cookiecutter.template_slug}}/{%raw%}{{cookiecutter.project_slug}}{%endraw%}/: .editorconfig  LICENSE.BSD-3-Clause  LICENSE.MIT  README.md
