[tool.poetry]
name = "{{ cookiecutter.template_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.template_description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
license = "{{ cookiecutter.license_id }}"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.group.dev.dependencies]
chance = "^0.110"
pytest = "^7.2.1"
pytest-cookies = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
